// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input CheckBox 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="checkbox"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Color 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="color"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Date: 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="date"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Datetime-local 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="datetime-local"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Email 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="email"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input File 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="file"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Hidden 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="hidden"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Image 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="image"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Month 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="month"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Number 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="number"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Password 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="password"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Radio 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="radio"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Range 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="range"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Reset 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="reset"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Search 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="search"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Submit 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="submit"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Tel 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="tel"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Text 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="text"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Time 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="time"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Url 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="url"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input Week 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 jIWIJD"
      type="week"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input hasError 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 iXjCqF"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Input playground 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <input
      class="Input-lswqho-0 iXjCqF"
      type="text"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;
